--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "@csstools/normalize.css": "github:csstools/normalize.css",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
