--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .js --ext .jsx ."
+    "lint": "eslint --ext .js --ext .jsx .",
+    "lintfix": "eslint --fix --ext .js --ext .jsx ."
   },
   "eslintConfig": {
     "extends": "react-app"
